# cpp_starter_project

./: .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.txt
lib/libA/: CMakeLists.txt
lib/libA/test/: CMakeLists.txt
lib/libC/: CMakeLists.txt
